[gd_scene load_steps=3 format=3 uid="uid://chcgtng4i5l71"]

[ext_resource type="Script" uid="uid://bhtayjfettf3" path="res://inventory_ui.gd" id="1_5v8q7"]
[ext_resource type="PackedScene" uid="uid://d3km7bpwabb7c" path="res://inventory_slot.tscn" id="2_34y5v"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5v8q7")

[node name="MainInventoryPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(450, 400)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryTabs" type="TabContainer" parent="MainInventoryPanel"]
layout_mode = 2
current_tab = 0

[node name="Inventory" type="VBoxContainer" parent="MainInventoryPanel/InventoryTabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="InventoryGridContainer" type="GridContainer" parent="MainInventoryPanel/InventoryTabs/Inventory"]
layout_mode = 2
columns = 9

[node name="Spacer" type="Control" parent="MainInventoryPanel/InventoryTabs/Inventory"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="MainHotbarGridContainer" type="GridContainer" parent="MainInventoryPanel/InventoryTabs/Inventory"]
layout_mode = 2
columns = 9

[node name="Creative" type="VBoxContainer" parent="MainInventoryPanel/InventoryTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="CreativeHBox" type="HBoxContainer" parent="MainInventoryPanel/InventoryTabs/Creative"]
layout_mode = 2

[node name="CreativeGridContainer" type="GridContainer" parent="MainInventoryPanel/InventoryTabs/Creative/CreativeHBox"]
layout_mode = 2
columns = 9

[node name="TrashSlot" parent="MainInventoryPanel/InventoryTabs/Creative/CreativeHBox" instance=ExtResource("2_34y5v")]
layout_mode = 2

[node name="HotbarPanel" type="PanelContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="HotbarContainer" type="HBoxContainer" parent="HotbarPanel"]
layout_mode = 2

[node name="FloatingItem" type="Control" parent="."]
anchors_preset = 0
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="FloatingItem"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 0
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="CountLabel" type="Label" parent="FloatingItem"]
layout_mode = 0

[node name="HeartsContainer" type="HBoxContainer" parent="."]
layout_mode = 0
mouse_filter = 2

[node name="SelectionOutline" type="Panel" parent="."]
layout_mode = 0

[node name="TooltipPanel" type="PanelContainer" parent="."]
top_level = true
z_index = 100
layout_mode = 0
mouse_filter = 2

[node name="TooltipLabel" type="Label" parent="TooltipPanel"]
layout_mode = 2
